# KV2_RC

./: .gitmodules
ESP32-CAM-MJPEG-Server/: ESP32-CAM-MJPEG-Server.ino  ap_control.cpp  ap_control.h  app_httpd.cpp  app_httpd.h  camera_control.cpp  camera_control.h  html_pages.h  message.h  pins.h
ESP32-CAM-MJPEG-Viewer/: settings.gradle
ESP32-CAM-MJPEG-Viewer/app/: build.gradle
ESP32-CAM-MJPEG-Viewer/app/src/main/: AndroidManifest.xml
ESP32-CAM-MJPEG-Viewer/app/src/main/java/com/painnick/kv2camera/: MainActivity.java
ESP32-CAM-MJPEG-Viewer/app/src/main/res/layout/: activity_main.xml
ESP32-CAM-MJPEG-Viewer/app/src/main/res/values/: strings.xml
ESP32-CAM-MJPEG-Viewer/app/src/main/res/values-night/: themes.xml
ESP32-CAM-MJPEG-Viewer/app/src/release/res/values/: ic_launcher_background.xml
ESP32-CAM-MJPEG-Viewer/gradle/wrapper/: gradle-wrapper.properties
tank-idf/: flash.sh  sdkconfig  sdkconfig.defaults  sdkconfig.esp32
tank-idf/main/: CMakeLists.txt  CannonController.cpp  CannonController.h  DFMiniMp3.h  PadController.cpp  PadController.h  TrackController.cpp  TrackController.h  TurretController.cpp  TurretController.h  arduino_main.cpp
tank-idf2/: sdkconfig.defaults  sdkconfig.esp32dev
tank-idf2/main/: CMakeLists.txt  common.h  main.c  sketch.cpp
tank-idf2/main/controllers/: CannonController.cpp  CannonController.h  Mp3Controller.h  Mp3Notify.h  PadController.cpp  PadController.h  TrackController.cpp  TrackController.h  TurretController.h
tank-idf2/main/libs/: DFMiniMp3.h
tank/src/: main.cpp
tank/src/controllers/: Mp3Controller.h
(+3 files in other folders)
